--- a/BasicTodoApp/app/src/main/res/layout/activity_main.xml
+++ b/BasicTodoApp/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ramoscruz.basictodoapp.MainActivity">
+    tools:context="com.ramoscruz.basictodoapp.MainActivity"
+    android:background="@color/light_gray">
 
     <ListView
         android:layout_width="wrap_content"
@@ -24,7 +25,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/etNewItem"
         android:layout_alignTop="@+id/btnAddItem"
-        android:hint="Enter a new item"
+        android:hint="Ingrese un nuevo item"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_toLeftOf="@+id/btnAddItem"
@@ -34,10 +35,12 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Item"
+        android:text="Agregar Item"
         android:id="@+id/btnAddItem"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:textColor="@color/white_color"
+        android:background="@color/colorPrimary"
         android:onClick="onAddItem"/>
 </RelativeLayout>
